# decent-sync-optimized

./: CMakeLists.txt  audio_processor.cpp  audio_processor.h  feature_scale.txt  main.cpp  main.h  model_weights.txt
